Quote Image Alignment Fixed

--- a/css/quote.css
+++ b/css/quote.css
@@ -33,7 +33,7 @@
         "none  text";
 }
 
-.quote-text:nth-child(1) {
+.quote-text-first {
     grid-area: text1;
 }
 
